serve static files

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -59,6 +59,6 @@
     <h2>Result</h2>
     <pre id="result">No run yet.</pre>
 
-    <script src="app.js"></script>
+    <script src="static/app.js"></script>
   </body>
 </html>
