--- a/frontend/index.html
+++ b/frontend/index.html
@@ -21,7 +21,7 @@
     </style>
   </head>
   <body>
-    <h1>Energy Optimizer — Demo UI</h1>
+    <h1>Energy Optimizer</h1>
     <form id="params-form">
       <label
         >Peak price (USD/kWh):
